<?xml version="1.0"?>
<package>
  <name>qt_vision_turtlebot3_maze</name>
  <version>0.1.0</version>
  <description>

     description

  </description>
  <maintainer email="lordkinesis@naver.com">kinesis</maintainer>
  <author>author</author>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
